fix: scrollbar layout

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -61,6 +61,10 @@
   }
 }
 
+html {
+  overflow-y: scroll;
+}
+
 body {
   font-family: "Atkinson", sans-serif;
   margin: 0;
@@ -72,6 +76,7 @@ body {
   line-height: 1.7;
   background-color: var(--bg-color);
   color: var(--text-color);
+  overflow: hidden;
 
   background-image: linear-gradient(
       0deg,
